# NewtonDivisionCircuitGenerator

./: .gitignore  ADD_SUB_LIBRARY.qip  Cargo.toml  Carry_Ripple.v  DIV_LIBRARY.qip  DIV_LIBRARY_syn.qip
packaged/: Cargo.toml
packaged/src/: adders.rs  circuit_tests.rs  cli.rs  data.rs  dividers.rs  helpers.rs  main.rs  multipliers.rs  primitives.rs  sat.rs
src/: adders.rs  bdd.rs  bdd_test.rs  circuit_tests.rs  cli.rs  data.rs  dividers.rs  helpers.rs  main.rs  multipliers.rs  poly_verify.rs  primitives.rs  sat_test.rs  verifycircuits.rs
